--- a/scripts/clock.css
+++ b/scripts/clock.css
@@ -12,7 +12,10 @@
 #shadow {
   margin: 5px 5px, 10px var(--greyLight-2), -3px, -3px, 8px var(--white);
 }
-
+#main_time {
+  font-size: 50px;
+  position:center;  
+}
 body {
     background: rgb(256, 256, 256);
     color: #333;
