--- a/scripts/clock.css
+++ b/scripts/clock.css
@@ -18,12 +18,12 @@ body {
 .clock {
   display: flex;
     flex-direction: column;
-  width: 55%;
-  height: 50%;
+  width: 35%;
+  height: 30%;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.5);
-
+  position:relative;
   color: #333;
   text-align: center;
   align-items: center;
@@ -37,7 +37,7 @@ body {
 
 .clock .digit1 .date-time{
   font-family: Georgia, serif;
-  
+  user-select: none;
   font-size: 3em;
 }
 
@@ -45,11 +45,13 @@ body {
   font-family: 'Courier New', monospace;
   font-weight: bold;
   font-size: 15em;
+  user-select: none;
 }
 
 .clock .digit3 span {
   font-family: 'Lucida Console', monospace;
   text-transform: uppercase;
+  user-select: none;
 }
 
 img {
@@ -92,6 +94,7 @@ img {
   border: none;
   border-radius: 5px;
   cursor:grabbing;
+  user-select: none;
 }
 
 .modal {
@@ -128,4 +131,12 @@ img {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+canvas {
+  border: 1px solid white;
+  width: 100%;
+  height: 100%;
+  stroke-width: 10%;
+  position:absolute;
 }
