--- a/scripts/clock.css
+++ b/scripts/clock.css
@@ -5,26 +5,29 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #fff
+  /*background-image: url('lofig.gif');*/
+  overflow: hidden;
+
 }
 .clockAndButton {
   display: flex;
   flex-direction: column;
   width: 55%;
   height: 50;
-  background-color: #fff;
+
 }
 
 .clock {
   display: flex;
     flex-direction: column;
+  padding-top: 25%;
   width: 35%;
   height: 30%;
-  background-color: #fff;
+
   border-radius: 10px;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.5);
+
   position:relative;
-  color: #333;
+  color: rgb(226, 194, 194);
   text-align: center;
   align-items: center;
   justify-content: center;
@@ -32,12 +35,13 @@ body {
 .clock span {
   font-family: Arial, sans-serif;
   font-size: 1em;
-  color: #333;
+  color: rgb(255, 255, 255);
 }
 
 .clock .digit1 .date-time{
-  font-family: Georgia, serif;
+  font-family: "Comic Sans", monospace;
   user-select: none;
+  font-weight: bold;
   font-size: 3em;
 }
 
@@ -89,8 +93,8 @@ img {
 .btn {
   margin: 10px;
   padding: 10px;
-  background-color: #333;
-  color: #fff;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   border: none;
   border-radius: 5px;
   cursor:grabbing;
@@ -133,10 +137,10 @@ img {
   cursor: pointer;
 }
 
-canvas {
-  border: 1px solid white;
-  width: 100%;
-  height: 100%;
-  stroke-width: 10%;
+video {
+  min-width: 100%;
+  min-height: 100%;
   position:absolute;
+  z-index: -1;
+  
 }
