old music player

--- a/scripts/clock.css
+++ b/scripts/clock.css
@@ -14,6 +14,7 @@ body {
   flex-direction: column;
   width: 55%;
   height: 50;
+  
 
 }
 
@@ -22,10 +23,9 @@ body {
     flex-direction: column;
   padding-top: 25%;
   width: 35%;
-  height: 30%;
+  height:min-content;
 
   border-radius: 10px;
-
   position:relative;
   color: rgb(226, 194, 194);
   text-align: center;
@@ -34,7 +34,7 @@ body {
 }
 .clock span {
   font-family: Arial, sans-serif;
-  font-size: 1em;
+  font-size: 1.1vh;
   color: rgb(255, 255, 255);
 }
 
