--- a/scripts/clock.css
+++ b/scripts/clock.css
@@ -160,143 +160,35 @@ video {
 
 /* Using flex with the column direction to
 align items in a vertical direction */
-.player {
-  position:absolute;
+      /* Add your custom CSS styles here */
+      .button {
+        background: #d9344f;
+        background-image: -webkit-linear-gradient(top, #d9344f, #2b7bb8);
+        background-image: -moz-linear-gradient(top, #d9344f, #2b7bb8);
+        background-image: -ms-linear-gradient(top, #d9344f, #2b7bb8);
+        background-image: -o-linear-gradient(top, #d9344f, #2b7bb8);
+        background-image: linear-gradient(to bottom, #d9344f, #2b7bb8);
+        -webkit-border-radius: 16;
+        -moz-border-radius: 16;
+        border-radius: 16px;
+        font-family: Arial;
+        color: #f5d5f5;
+        font-size: 20px;
+        padding: 10px 20px 10px 20px;
+        text-decoration: none;
+      }
 
-  display: flex;
-  align-items:center;
-  flex-direction:column;
-  justify-content: center;
-  background-color: burlywood;
-  right: 5vh;
-  bottom: 5vh;
-  border-radius: 10px;
-  padding-bottom: 10px;
-
-  }
-  
-  .details {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 25px;
-  }
-  
-  .track-art {
-  margin: 25px;
-  height: 250px;
-  width: 250px;
-  background-image: URL(
-    "https://source.unsplash.com/Qrspubmx6kE/640x360");
-  background-size: cover;
-  background-position: center;
-  border-radius: 15%;
-  }
-  
-  /* Changing the font sizes to suitable ones */
-  .now-playing {
-  font-size: 1rem;
-  }
-  
-  .track-name {
-  font-size: 3rem;
-  }
-  
-  .track-artist {
-  font-size: 1.5rem;
-  }
-  
-  /* Using flex with the row direction to
-  align items in a horizontal direction */
-  .buttons {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  }
-  
-  .playpause-track,
-  .prev-track,
-  .next-track {
-  padding: 25px;
-  opacity: 0.8;
-  
-  /* Smoothly transition the opacity */
-  transition: opacity .2s;
-  }
-  
-  /* Change the opacity when mouse is hovered */
-  .playpause-track:hover,
-  .prev-track:hover,
-  .next-track:hover {
-  opacity: 1.0;
-  }
-  
-  /* Define the slider width so that it scales properly */
-  .slider_container {
-  width: 75%;
-  max-width: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  }
-  
-  /* Modify the appearance of the slider */
-  .seek_slider, .volume_slider {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  height: 5px;
-  background: black;
-  opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
-  border-radius: 12px;
-  }
-  
-  /* Modify the appearance of the slider thumb */
-  .seek_slider::-webkit-slider-thumb,
-  .volume_slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  width: 15px;
-  height: 15px;
-  background: white;
-  cursor: pointer;
-  border-radius: 50%;
-  }
-  
-  /* Change the opacity when mouse is hovered */
-  .seek_slider:hover,
-  .volume_slider:hover {
-  opacity: 1.0;
-  }
-  
-  .seek_slider {
-  width: 60%;
-  }
-  
-  .volume_slider {
-  width: 30%;
-  }
-  
-  .current-time,
-  .total-duration {
-  padding: 10px;
-  }
-  
-  i.fa-volume-down,
-  i.fa-volume-up {
-  padding: 10px;
-  }
-  
-  /* Change the mouse cursor to a pointer
-  when hovered over */
-  i.fa-play-circle,
-  i.fa-pause-circle,
-  i.fa-step-forward,
-  i.fa-step-backward {
-  cursor: pointer;
-  }
-  
+      .btn:hover {
+        background: #3cb0fd;
+        background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+        text-decoration: none;
+      }
+      .video-container {
+      max-height: 0;
+      overflow: hidden;
+      
+    }
