final commit before beginning chatboot

--- a/scripts/clock.css
+++ b/scripts/clock.css
@@ -5,10 +5,26 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  /*background-image: url('lofig.gif');*/
+  background-image: url('1600w-_Tcjok-d9b4.webp');
+  background-repeat: no-repeat;
+  background-size:cover;
   overflow: hidden;
 
 }
+
+/*
+$$$$$$$$\ $$\                                $$$\           $$\      $$\ $$\                     
+\__$$  __|\__|                              $  $$\          $$$\    $$$ |\__|                    
+   $$ |   $$\ $$$$$$\$$$$\   $$$$$$\        \$$$\ |         $$$$\  $$$$ |$$\  $$$$$$$\  $$$$$$$\ 
+   $$ |   $$ |$$  _$$  _$$\ $$  __$$\       $$\$$\$$\       $$\$$\$$ $$ |$$ |$$  _____|$$  _____|
+   $$ |   $$ |$$ / $$ / $$ |$$$$$$$$ |      $$ \$$ __|      $$ \$$$  $$ |$$ |\$$$$$$\  $$ /      
+   $$ |   $$ |$$ | $$ | $$ |$$   ____|      $$ |\$$\        $$ |\$  /$$ |$$ | \____$$\ $$ |      
+   $$ |   $$ |$$ | $$ | $$ |\$$$$$$$\        $$$$ $$\       $$ | \_/ $$ |$$ |$$$$$$$  |\$$$$$$$\ 
+   \__|   \__|\__| \__| \__| \_______|       \____\__|      \__|     \__|\__|\_______/  \_______|
+                                                                                                                                                                         
+                                                                                                 
+*/
+
 .clockAndButton {
   display: flex;
   flex-direction: column;
@@ -145,17 +161,22 @@ video {
   
 }
 
+
 /*
 * CSS part for the music
 * Wish me luck 💀
-* WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
-
-███╗░░░███╗██╗░░░██╗░██████╗██╗░█████╗░  ██████╗░██╗░░░░░░█████╗░██╗░░░██╗███████╗██████╗░
-████╗░████║██║░░░██║██╔════╝██║██╔══██╗  ██╔══██╗██║░░░░░██╔══██╗╚██╗░██╔╝██╔════╝██╔══██╗
-██╔████╔██║██║░░░██║╚█████╗░██║██║░░╚═╝  ██████╔╝██║░░░░░███████║░╚████╔╝░█████╗░░██████╔╝
-██║╚██╔╝██║██║░░░██║░╚═══██╗██║██║░░██╗  ██╔═══╝░██║░░░░░██╔══██║░░╚██╔╝░░██╔══╝░░██╔══██╗
-██║░╚═╝░██║╚██████╔╝██████╔╝██║╚█████╔╝  ██║░░░░░███████╗██║░░██║░░░██║░░░███████╗██║░░██║
-╚═╝░░░░░╚═╝░╚═════╝░╚═════╝░╚═╝░╚════╝░  ╚═╝░░░░░╚══════╝╚═╝░░╚═╝░░░╚═╝░░░╚══════╝╚═╝░░╚═╝
+* WOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+$$\      $$\                     $$\                 $$$$$$$\  $$\                                         
+$$$\    $$$ |                    \__|                $$  __$$\ $$ |                                        
+$$$$\  $$$$ |$$\   $$\  $$$$$$$\ $$\  $$$$$$$\       $$ |  $$ |$$ | $$$$$$\  $$\   $$\  $$$$$$\   $$$$$$\  
+$$\$$\$$ $$ |$$ |  $$ |$$  _____|$$ |$$  _____|      $$$$$$$  |$$ | \____$$\ $$ |  $$ |$$  __$$\ $$  __$$\ 
+$$ \$$$  $$ |$$ |  $$ |\$$$$$$\  $$ |$$ /            $$  ____/ $$ | $$$$$$$ |$$ |  $$ |$$$$$$$$ |$$ |  \__|
+$$ |\$  /$$ |$$ |  $$ | \____$$\ $$ |$$ |            $$ |      $$ |$$  __$$ |$$ |  $$ |$$   ____|$$ |      
+$$ | \_/ $$ |\$$$$$$  |$$$$$$$  |$$ |\$$$$$$$\       $$ |      $$ |\$$$$$$$ |\$$$$$$$ |\$$$$$$$\ $$ |      
+\__|     \__| \______/ \_______/ \__| \_______|      \__|      \__| \_______| \____$$ | \_______|\__|      
+                                                                             $$\   $$ |                    
+                                                                             \$$$$$$  |                    
+                                                                              \______/                     
 */
 
 /* Using flex with the column direction to
@@ -198,3 +219,17 @@ align items in a vertical direction */
       right: 0;
 
     }
+/*
+
+ $$$$$$\  $$\                  $$\     $$$$$$$\             $$\     
+$$  __$$\ $$ |                 $$ |    $$  __$$\            $$ |    
+$$ /  \__|$$$$$$$\   $$$$$$\ $$$$$$\   $$ |  $$ | $$$$$$\ $$$$$$\   
+$$ |      $$  __$$\  \____$$\\_$$  _|  $$$$$$$\ |$$  __$$\\_$$  _|  
+$$ |      $$ |  $$ | $$$$$$$ | $$ |    $$  __$$\ $$ /  $$ | $$ |    
+$$ |  $$\ $$ |  $$ |$$  __$$ | $$ |$$\ $$ |  $$ |$$ |  $$ | $$ |$$\ 
+\$$$$$$  |$$ |  $$ |\$$$$$$$ | \$$$$  |$$$$$$$  |\$$$$$$  | \$$$$  |
+ \______/ \__|  \__| \_______|  \____/ \_______/  \______/   \____/ 
+                                                                                                                                      
+                                                            
+*/
+
