--- a/scripts/clock.css
+++ b/scripts/clock.css
@@ -232,4 +232,24 @@ $$ |  $$\ $$ |  $$ |$$  __$$ | $$ |$$\ $$ |  $$ |$$ |  $$ | $$ |$$\
                                                                                                                                       
                                                             
 */
+#chatbot-container {
+  position:absolute;
+  display: flex;
+  align-items:center;
+  flex-direction:column;
+  justify-content:flex-end;
+  background: linear-gradient(90deg, rgba(255,213,213,1) 0%, rgba(212,64,119,1) 100%, rgba(0,212,255,1) 100%);
+  left: 5vh;
+  bottom: 5vh;
+  border-radius: 10px;
+  padding-bottom: 10px;
+  width: 300px;
+  min-height: 100px;
+  max-height: 200px;
+  overflow-y:auto;
+
+  }
+#chatbot-title {
+  color: white;
+}
 
